--- a/acp-P2/acp-p2/src/acp/p2/FXMLDocument.fxml
+++ b/acp-P2/acp-p2/src/acp/p2/FXMLDocument.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane id="AnchorPane" prefHeight="362.0" prefWidth="401.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="acp.p2.FXMLDocumentController">
@@ -14,8 +15,8 @@
           <Menu mnemonicParsing="false" text="File">
             <items>
               <MenuItem mnemonicParsing="false" text="Open" />
-                  <MenuItem fx:id="menuBar" mnemonicParsing="false" text="Save" />
-                  <MenuItem mnemonicParsing="false" text="Exit" />
+                  <MenuItem mnemonicParsing="false" text="Save" />
+                  <MenuItem mnemonicParsing="false" onAction="#closeApp" text="Exit" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Edit">
@@ -25,5 +26,6 @@
           </Menu>
         </menus>
       </MenuBar>
+      <TextArea layoutY="29.0" prefHeight="329.0" prefWidth="401.0" />
     </children>
 </AnchorPane>
