saves to file only needs to be able to spell check

--- a/acp-P2/acp-p2/src/acp/p2/FXMLDocument.fxml
+++ b/acp-P2/acp-p2/src/acp/p2/FXMLDocument.fxml
@@ -15,7 +15,7 @@
           <Menu mnemonicParsing="false" text="File">
             <items>
               <MenuItem mnemonicParsing="false" onAction="#openFile" text="Open" />
-                  <MenuItem mnemonicParsing="false" text="Save" />
+                  <MenuItem mnemonicParsing="false" onAction="#saveFile" text="Save" />
                   <MenuItem mnemonicParsing="false" onAction="#closeApp" text="Exit" />
             </items>
           </Menu>
