--- a/acp-P2/acp-p2/src/acp/p2/FXMLDocument.fxml
+++ b/acp-P2/acp-p2/src/acp/p2/FXMLDocument.fxml
@@ -21,7 +21,7 @@
           </Menu>
           <Menu mnemonicParsing="false" text="Edit">
             <items>
-              <MenuItem mnemonicParsing="false" text="SpellChecker" />
+              <MenuItem mnemonicParsing="false" onAction="#checkSpelling" text="SpellChecker" />
             </items>
           </Menu>
         </menus>
