--- a/acp-P3/acp-P3/src/acp/p3/FXMLDocument.fxml
+++ b/acp-P3/acp-P3/src/acp/p3/FXMLDocument.fxml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.shape.Line?>
 
-<AnchorPane id="AnchorPane" prefHeight="469.0" prefWidth="624.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="acp.p3.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="500.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="acp.p3.FXMLDocumentController">
     <children>
       <ButtonBar layoutX="111.0" layoutY="432.0" prefHeight="48.0" prefWidth="341.0">
         <buttons>
@@ -19,5 +23,37 @@
       <Label layoutX="22.0" layoutY="6.0" text="Start" />
       <Label layoutX="545.0" layoutY="6.0" text="Finish" />
       <Line endX="450.0" layoutX="123.0" layoutY="219.0" startX="-100.0" />
+      <Pane layoutX="22.0" layoutY="28.0" prefHeight="190.0" prefWidth="551.0">
+         <children>
+            <ImageView fx:id="horse1" fitHeight="35.0" fitWidth="110.0" pickOnBounds="true" preserveRatio="true">
+               <viewport>
+                  <Rectangle2D />
+               </viewport>
+               <image>
+                  <Image url="@Images/horse1.JPG" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="horse2" fitHeight="35.0" fitWidth="110.0" layoutX="-1.0" layoutY="38.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@Images/horse2.JPG" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="horse3" fitHeight="35.0" fitWidth="110.0" layoutX="-1.0" layoutY="76.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@Images/horse3.JPG" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="horse4" fitHeight="35.0" fitWidth="110.0" layoutY="111.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@Images/horse4.JPG" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="horse5" fitHeight="35.0" fitWidth="110.0" layoutY="148.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@Images/horse5.JPG" />
+               </image>
+            </ImageView>
+         </children>
+      </Pane>
     </children>
 </AnchorPane>
