--- a/acp-P4/acp-P4/src/acp/p4/FXMLDocument.fxml
+++ b/acp-P4/acp-P4/src/acp/p4/FXMLDocument.fxml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.Line?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns:fx="http://javafx.com/fxml/1" fx:controller="acp.p4.FXMLDocumentController">
-    <children>
-        <Button layoutX="126" layoutY="90" text="Click Me!" onAction="#handleButtonAction" fx:id="button" />
-        <Label layoutX="126" layoutY="120" minHeight="16" minWidth="69" fx:id="label" />
-    </children>
+<AnchorPane id="AnchorPane" prefHeight="215.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="acp.p4.FXMLDocumentController">
+   <children>
+      <Line endX="100.0" layoutX="160.0" layoutY="69.0" startX="-100.0" />
+      <Line endX="100.0" layoutX="160.0" layoutY="120.0" startX="-100.0" />
+      <Line endX="-35.0" endY="-134.0" layoutX="160.0" layoutY="156.0" startX="-35.0" startY="16.0" />
+      <Line endX="-35.0" endY="-134.0" layoutX="233.0" layoutY="156.0" startX="-35.0" startY="16.0" />
+      <Pane fx:id="pane0" layoutX="60.0" layoutY="22.0" onMouseClicked="#drawPane0" prefHeight="48.0" prefWidth="65.0" />
+      <Pane fx:id="pane1" layoutX="125.0" layoutY="22.0" prefHeight="48.0" prefWidth="72.0" />
+      <Pane fx:id="pane2" layoutX="199.0" layoutY="22.0" prefHeight="48.0" prefWidth="65.0" />
+      <Pane fx:id="pane3" layoutX="60.0" layoutY="69.0" prefHeight="48.0" prefWidth="65.0" />
+      <Pane fx:id="pane4" layoutX="125.0" layoutY="69.0" prefHeight="48.0" prefWidth="72.0" />
+      <Pane fx:id="pane5" layoutX="199.0" layoutY="69.0" prefHeight="48.0" prefWidth="65.0" />
+      <Pane fx:id="pane6" layoutX="60.0" layoutY="121.0" prefHeight="54.0" prefWidth="65.0" />
+      <Pane fx:id="pane7" layoutX="125.0" layoutY="121.0" prefHeight="54.0" prefWidth="72.0" />
+      <Pane fx:id="pane8" layoutX="196.0" layoutY="121.0" prefHeight="54.0" prefWidth="65.0" />
+   </children>
 </AnchorPane>
