--- a/acp-P4/acp-P4/src/acp/p4/FXMLDocument.fxml
+++ b/acp-P4/acp-P4/src/acp/p4/FXMLDocument.fxml
@@ -11,7 +11,7 @@
       <Line endX="-35.0" endY="-134.0" layoutX="160.0" layoutY="156.0" startX="-35.0" startY="16.0" />
       <Line endX="-35.0" endY="-134.0" layoutX="233.0" layoutY="156.0" startX="-35.0" startY="16.0" />
       <Pane fx:id="pane0" layoutX="60.0" layoutY="22.0" onMouseClicked="#drawPane0" prefHeight="48.0" prefWidth="65.0" />
-      <Pane fx:id="pane1" layoutX="125.0" layoutY="22.0" prefHeight="48.0" prefWidth="72.0" />
+      <Pane fx:id="pane1" layoutX="125.0" layoutY="22.0" onMouseClicked="#drawPane1" prefHeight="48.0" prefWidth="72.0" />
       <Pane fx:id="pane2" layoutX="199.0" layoutY="22.0" prefHeight="48.0" prefWidth="65.0" />
       <Pane fx:id="pane3" layoutX="60.0" layoutY="69.0" prefHeight="48.0" prefWidth="65.0" />
       <Pane fx:id="pane4" layoutX="125.0" layoutY="69.0" prefHeight="48.0" prefWidth="72.0" />
