--- a/acp-P5/Project5/src/project5/FXMLDocument.fxml
+++ b/acp-P5/Project5/src/project5/FXMLDocument.fxml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project5.FXMLDocumentController">
-    <children>
-        <Button layoutX="126" layoutY="90" text="Click Me!" onAction="#handleButtonAction" fx:id="button" />
-        <Label layoutX="126" layoutY="120" minHeight="16" minWidth="69" fx:id="label" />
-    </children>
+<AnchorPane id="AnchorPane" prefHeight="374.0" prefWidth="482.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project5.FXMLDocumentController">
+   <children>
+      <Label layoutX="54.0" layoutY="25.0" text="Instrument Type:" />
+      <Label layoutX="54.0" layoutY="66.0" text="Instrument Brand:" />
+      <Label layoutX="54.0" layoutY="103.0" text="Maximum cost:" />
+      <Label layoutX="54.0" layoutY="144.0" text="Warehouse Location:" />
+      <Button id="submitBtn" fx:id="submitBtn" layoutX="161.0" layoutY="187.0" mnemonicParsing="false" text="Submit Request" />
+      <TextField id="maxCostTextField" layoutX="192.0" layoutY="104.0" />
+      <ChoiceBox id="instrumentTypeChoiceBox" fx:id="instrumentTypeChoiceBox" layoutX="193.0" layoutY="25.0" prefWidth="150.0" />
+      <ChoiceBox id="instrumentBrandChoiceBox" fx:id="instrumentBrandChoiceBox" layoutX="193.0" layoutY="66.0" prefWidth="150.0" />
+      <ChoiceBox id="warehouseLocationChoiceBox" fx:id="warehouseLocationChoiceBox" layoutX="197.0" layoutY="139.0" prefWidth="150.0" />
+   </children>
 </AnchorPane>
