--- a/acp-P5/Project5/src/project5/FXMLDocument.fxml
+++ b/acp-P5/Project5/src/project5/FXMLDocument.fxml
@@ -12,10 +12,10 @@
       <Label layoutX="54.0" layoutY="66.0" text="Instrument Brand:" />
       <Label layoutX="54.0" layoutY="103.0" text="Maximum cost:" />
       <Label layoutX="54.0" layoutY="144.0" text="Warehouse Location:" />
-      <Button id="submitBtn" fx:id="submitBtn" layoutX="161.0" layoutY="187.0" mnemonicParsing="false" onAction="#submitBtn" text="Submit Request" />
       <TextField id="maxCostTextField" layoutX="192.0" layoutY="104.0" />
       <ChoiceBox id="instrumentTypeChoiceBox" fx:id="instrumentTypeChoiceBox" layoutX="193.0" layoutY="25.0" prefWidth="150.0" />
       <ChoiceBox id="instrumentBrandChoiceBox" fx:id="instrumentBrandChoiceBox" layoutX="193.0" layoutY="66.0" prefWidth="150.0" />
       <ChoiceBox id="warehouseLocationChoiceBox" fx:id="warehouseLocationChoiceBox" layoutX="197.0" layoutY="139.0" prefWidth="150.0" />
+      <Button id="submitBtn" layoutX="189.0" layoutY="187.0" mnemonicParsing="false" onAction="#submitBtnClicked" text="Submit Request" />
    </children>
 </AnchorPane>
