--- a/acp-P5/Project5/src/project5/FXMLSubmitResults.fxml
+++ b/acp-P5/Project5/src/project5/FXMLSubmitResults.fxml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project5.FXMLSubmitResultsController">
-    
+
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="project5.FXMLSubmitResultsController">
+   <children>
+      <Label layoutX="32.0" layoutY="32.0" text="Results" />
+      <Text fx:id="queryResult" layoutX="40.0" layoutY="91.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+   </children>
 </AnchorPane>
