--- a/acp-P5/Project5/src/project5/FXMLSubmitResults.fxml
+++ b/acp-P5/Project5/src/project5/FXMLSubmitResults.fxml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="project5.FXMLSubmitResultsController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project5.FXMLSubmitResultsController">
    <children>
-      <Label layoutX="32.0" layoutY="32.0" text="Results" />
+      <Label layoutX="26.0" text="Results">
+         <font>
+            <Font size="48.0" />
+         </font></Label>
       <Text fx:id="queryResult" layoutX="40.0" layoutY="91.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+      <Button fx:id="okBtn" layoutX="510.0" layoutY="361.0" mnemonicParsing="false" onAction="#okBtnClick" text="Ok" />
    </children>
 </AnchorPane>
