--- a/acp-P5/Project5/src/project5/FXMLDocument.fxml
+++ b/acp-P5/Project5/src/project5/FXMLDocument.fxml
@@ -12,7 +12,7 @@
       <Label layoutX="54.0" layoutY="66.0" text="Instrument Brand:" />
       <Label layoutX="54.0" layoutY="103.0" text="Maximum cost:" />
       <Label layoutX="54.0" layoutY="144.0" text="Warehouse Location:" />
-      <TextField id="maxCostTextField" layoutX="192.0" layoutY="104.0" />
+      <TextField id="maxCostTextField" fx:id="maximumCost" layoutX="192.0" layoutY="104.0" />
       <ChoiceBox id="instrumentTypeChoiceBox" fx:id="instrumentTypeChoiceBox" layoutX="193.0" layoutY="25.0" prefWidth="150.0" />
       <ChoiceBox id="instrumentBrandChoiceBox" fx:id="instrumentBrandChoiceBox" layoutX="193.0" layoutY="66.0" prefWidth="150.0" />
       <ChoiceBox id="warehouseLocationChoiceBox" fx:id="warehouseLocationChoiceBox" layoutX="197.0" layoutY="139.0" prefWidth="150.0" />
